--- a/src/index.css
+++ b/src/index.css
@@ -1,208 +1,208 @@
-* {
-  font-family: "Times New Roman", Times, serif;
-}
 
-p {
-  display: inline-flex;  
-  flex-wrap: wrap;
-  text-align: center;
-  font-size: 15px;
-  font-size: 1.4vw;
-  font-weight: 500;
-  padding: 20px;
-}
-
-h2 {
-  display:flex;  
-  flex-wrap: wrap;
-  text-align: center;
-  font-size: 14px;
-  font-size: 1.55vw;
-  font-weight: 500;
-  padding: 20px;
-  color: lightslategrey;
+#header {
+  background-color: darkolivegreen;
 }
 
 #hero {
-  background-image:url("../src/assets/images/hero-bg.jpg");
-  max-height: 175px;
-  max-width: 100%;
-  height: fit-content;
+  object-fit: cover;
+  width: 100%;
+  height: 150px;
+}
+
+#header h1{
+  display: inline;
+  color: rgb(255, 255, 255);
+  font-size: 30px;
+  padding-left: 1vw;
+}
+
+#medialink{
+  float: right;
+  padding: 10px;
+}
+
+#facebook, #twitter, #instagram {
+  padding-right: 10px;
+}
+
+
+
+
+body {
+  margin: 0;
+  background: #d4d4d4;
+  font-family: roboto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+
+:root {
+  --bg:  #242526;
+  --bg-accent: #484a4d;
+  --text-color: #dadce1;
+  --nav-size: 60px;
+  --border: 1px solid #474a4d;
+  --border-radius: 8px;
+  --speed: 500ms; 
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  color: var(--text-color);
+  text-decoration: none;;
+}
+
+
+.navbar {
+  height: var(--nav-size);
+  background-color: var(--bg);
+  padding: 0 1rem;
+  border-bottom: var(--border);
+}
+
+#nav-title {
+  display: flex;
+  flex-wrap: wrap;
+  text-align: left;
   width: 100%;
 }
 
-#header {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: start;
-}
-
-#nav {
-  display: inline;
-  font-size: large;
-  align-content: center;
-  margin: 7px 0;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  float: right;
-}
-
-#nav-title {
- display: inline;
- position: relative; bottom: 40px;
- color: white;
- font-size: 4.0vw;
-}
-
-#nav a {
-  display: inline;
-  padding: 10px 15px;
-  font-weight: Medium;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  color: rgb(3, 3, 3);
-  font-size: 14px;
-  font-size: 1.55vw;
-}
-
-#nav a.active{
-  color:rgb(66, 180, 21);
-  background: rgb(255, 255, 255);
-  opacity: 100%;
-}
-
-#nav a:hover {
-  background: rgb(181, 186, 190);
-  color: white;
-  border-radius: 15px;
-  font-weight:700;
-}
-
-#nav-title {
-  position: relative; bottom: 70px
-}
-
-/*NAV/HEADER CSS END */
-
-#footer-text {
-  font-size: 14px;
-  font-size: 1.2vw;
-}
-
-#emailtxt {
-  float: right;
-  text-align: center;
-  font-size: medium;
-}
-
-/*END OF FOOTER CSS*/
-
-/* #about-title {
-  font-size: 14px;
-  font-size: 1.8vw;
-} */
-#about-text{
-  display: inline-flex;
-  flex-wrap: wrap;
-}
-
-#photo {
-  border-radius: 100px;
-  border-color: rgb(0, 0, 0);
-  display:flex;
-  flex-wrap: wrap;
-  max-width: 300px;
-}
-
-#aside-div {
-  position: relative;
-  right: 80px;
-  padding:0px 0px 20px 80px;
+/* <ul> */
+.navbar-nav {
+  width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+/* <li> */
+.nav-item {
+  width: calc(var(--nav-size) * 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-left: 50vw;
+}
+
+/* Icon Button */
+.icon-button {
+  --button-size: calc(var(--nav-size) * 0.4);
+  width: var(--button-size);
+  height: var(--button-size);
+  background-color: #484a4d;
+  border-radius: 50%;
+  padding: 5px;
+  margin: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: filter 300ms;
   
 }
 
-aside {
-  float: right;
-  display: inline;
-  position: relative;bottom: 150px; right: 40px;
-  width: 30%;
-  height: 100%;
-  background-color: lightslategrey;
-
+.icon-button:hover {
+  filter: brightness(1.2);
 }
 
-/*ABOUT CSS END */
-
-#card-items {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: auto;
-  grid-gap: 1rem;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+.icon-button svg { 
+  fill: var(--text-color);
+  width: 20px;
+  height: 20px;
 }
 
-.card {
-  background-color: var(--platinum);
-  border-radius: 5px;
-  height: 400px;
-  margin: 2rem;
-  position: relative;
-  width: 400px;
-  box-shadow:10px 5px 5px grey;
+
+/* Dropdown Menu */
+
+.dropdown {
+  position: absolute;
+  top: 200px;
+  width: 300px;
+  transform: translateX(-45%);
+  background-color: var(--bg);
+  border: var(--border);
+  border-radius: var(--border-radius);
+  padding: 1rem;
+  overflow: hidden;
+  transition: height var(--speed) ease;
 }
 
-.card:hover {
-  opacity: 80%;
-
-}
-
-#card-img {
-  max-width: 100%;
-  max-height: 65%;
-}
-
-#card-title {
-  font-size: 14px;
-  font-size: 1.5vw;
-  text-align: center;
-}
-
-#card-topics {
-  font-size: 14px;
-  font-size: 1.0vw;
-  text-align: center;
-}
-
-#project-icon {
-  max-height: 50%;
-}
-
-/*END OF PORTFOLIO CSS*/
-
-#contact-form-main {
-width: 80%;
-margin: 0 auto;
-align-content: center;
-}
-
-/*END OF CONTACT CSS*/
-
-#resume-img {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+.menu {
   width: 100%;
-  padding:20px 20px;
 }
 
-#img-download {
-  visibility: hidden;
-}
-
-#resume {
+.menu-item {
+  height: 50px;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding:40px
+  align-items: center;
+  border-radius: var(--border-radius);
+  transition: background var(--speed);
+  padding: 0.5rem;
 }
+
+.menu-item a{
+  width: 100%;
+  height: 20px;
+}
+
+.menu-item .icon-button {
+  margin-right: 0.5rem;
+}
+
+
+.menu-item .icon-button:hover {
+  filter: none;
+}
+
+.menu-item:hover {
+  background-color: #525357;
+}
+
+.icon-right {
+  margin-left: auto;
+}
+
+/* CSSTransition classes  */
+.menu-primary-enter {
+  position: absolute;
+  transform: translateX(-110%);
+}
+.menu-primary-enter-active {
+  transform: translateX(0%);
+  transition: all var(--speed) ease;
+}
+.menu-primary-exit {
+  position: absolute;
+}
+.menu-primary-exit-active {
+  transform: translateX(-110%);
+  transition: all var(--speed) ease;
+}
+
+
+.menu-secondary-enter {
+  transform: translateX(110%);
+}
+.menu-secondary-enter-active {
+  transform: translateX(0%);
+  transition: all var(--speed) ease;
+}
+.menu-secondary-exit {
+
+}
+.menu-secondary-exit-active {
+  transform: translateX(110%);
+  transition: all var(--speed) ease;
+}
+
+/* Porfolio Cards*/
