--- a/src/index.css
+++ b/src/index.css
@@ -425,12 +425,12 @@ width: 100%;
 /*header*/
 
 .fogwrapper {
-  height: 18.5%;
+  height: 150px;
   position: absolute;
   top: 0;
   width: 100%;
   -webkit-filter: blur(1px) grayscale(0.2) saturate(1.2) sepia(0.2);
-  filter: blur(1px) grayscale(0.2) saturate(1.2) sepia(0.2);
+  filter: blur(1px) grayscale(0.2) saturate(1.2) sepia(0.2)
 }
 #foglayer_01, #foglayer_02, #foglayer_03 {
   height: 100%;
@@ -579,66 +579,3 @@ width: 100%;
   100% { left: -100%; }
 }
 
-@media only screen
-  and (min-width: 320px)
-  and (max-height:686px) {
-  #foglayer_01, #foglayer_02, #foglayer_03 {
-    height: 120%;
-    position: absolute;
-    width: 200%;
-  }
-}
-
-@media only screen
-  and (min-width: 321px)
-  and (max-height:800px) {
-  #foglayer_01, #foglayer_02, #foglayer_03 {
-    height: 111%;
-    position: absolute;
-    width: 200%;
-  }
-}
-
-@media only screen
-  and (min-width: 768px)
-  and(max-width:769)
-  and (max-height:1024px) {
-  #foglayer_01, #foglayer_02, #foglayer_03 {
-    height: 80.5%;
-    position: absolute;
-    width: 200%;
-  }
-}
-
-@media only screen
-  and (max-width: 768px)
-  and(min-width:768)
-  and(min-height:1024)
-  and (max-height:1024px) {
-  #foglayer_01, #foglayer_02, #foglayer_03 {
-    height: 80.5%;
-    position: absolute;
-    width: 200%;
-  }
-}
-
-
-@media only screen
-  and (max-width: 1024px)
-  and (max-height:768px) {
-  #foglayer_01, #foglayer_02, #foglayer_03 {
-    height: 80.5%;
-    position: absolute;
-    width: 200%;
-  }
-}
-
-@media only screen
-  and (min-width: 1044px)
-  and (min-height:1024px) {
-  #foglayer_01, #foglayer_02, #foglayer_03 {
-    height: 200%;
-    position: absolute;
-    width: 200%;
-  }
-}
