--- a/src/index.css
+++ b/src/index.css
@@ -312,10 +312,11 @@ p {
 }
 
 #photo{
-  border-radius: 100px;
+  border-radius: 400px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  max-height: 150px;
 }
 
 #skills {
