--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 #background{
-  object-fit: cover;
   width: 100%;
-  max-height: 1080px;
+  height: 100%;
   overflow-y: hidden;
 }
 
@@ -87,6 +86,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
   overflow-y: hidden;
+  height: 100%;
+  width: 100%;
   
 }
 
@@ -548,6 +549,7 @@ width: 100%;
   height: 100%;
   position: absolute;
   width: 200%;
+  overflow-x: hidden;
 }
 #foglayer_01 .image01, #foglayer_01 .image02,
 #foglayer_02 .image01, #foglayer_02 .image02,
