--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,17 @@
 #background{
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
   overflow-y: hidden;
 }
 
-
-.footer {
-  z-index: 4;
-  background-color: var(--bg);
-  height: 40px;
-  padding: 10px;
-  margin-top: 16vh;
+footer{
+  background-color: #242526;
+  height: 80px;
 }
 
-.footer p{
+footer p{
+  padding:20px;
   color: white;
 }
 
@@ -84,11 +82,6 @@ body {
   font-family: roboto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  height: 100%;
-  width: 100%;
-  
 }
 
 code {
@@ -133,6 +126,7 @@ code {
   --speed: 500ms; 
   overflow-x: hidden;
 }
+
 
 ul {
   list-style: none;
@@ -313,6 +307,11 @@ p {
   justify-content: center;
 }
 
+.container{
+  margin-top: 15vh;
+  height: 100%;
+}
+
 .contact-info p {
   padding:20px
 }
@@ -452,13 +451,16 @@ width: 100%;
 .form{
   width: 100%;
   padding: 20px;
+  display: block;
+  text-align: center;
+  margin-left: 8vw;
+
 }
 
 .form-group{
   width: 100%;
   display: block;
-  margin-left: 21.7vw;
-  width: 70%;
+  width: 80%;
 }
 
 .form-group-btn{
@@ -536,20 +538,22 @@ width: 100%;
 
 /* Fog */
 /*header*/
+/* #header{
+  width: 101vw;
+}
 
 .fogwrapper {
   height: 150px;
   position: absolute;
   top: 0;
-  width: 100%;
+  width: 101vw;
   -webkit-filter: blur(1px) grayscale(0.2) saturate(1.2) sepia(0.2);
   filter: blur(1px) grayscale(0.2) saturate(1.2) sepia(0.2)
 }
 #foglayer_01, #foglayer_02, #foglayer_03 {
   height: 100%;
   position: absolute;
-  width: 200%;
-  overflow-x: hidden;
+  width: 100%;
 }
 #foglayer_01 .image01, #foglayer_01 .image02,
 #foglayer_02 .image01, #foglayer_02 .image02,
@@ -576,7 +580,7 @@ width: 100%;
   'attachment: fixed' causing unexpected results in Chrome
   'repeat-x' || 'no-repeat'; results remain the same
 */ 
-#foglayer_01 .image01, #foglayer_01 .image02 {
+/* #foglayer_01 .image01, #foglayer_01 .image02 {
   background: url("https://raw.githubusercontent.com/danielstuart14/CSS_FOG_ANIMATION/master/fog1.png") center center/cover no-repeat transparent;
 }
 #foglayer_02 .image01, #foglayer_02 .image02,
@@ -585,6 +589,7 @@ width: 100%;
 }
 
 /* ---------- Keyframe Layer 1 ---------- */
+/*
 @-webkit-keyframes foglayer_01_opacity {
   0% { opacity: .1; }
   22% { opacity: .5; }
@@ -618,6 +623,7 @@ width: 100%;
   100% { opacity: .1; }
 }
 /* ---------- Keyframe Layer 2 ---------- */
+/*
 @-webkit-keyframes foglayer_02_opacity {
   0% { opacity: .5; }
   25% { opacity: .2; }
@@ -647,6 +653,7 @@ width: 100%;
   100% { opacity: .5; }
 }
 /* ---------- Keyframe Layer 3 ---------- */
+/*
 @-webkit-keyframes foglayer_03_opacity {
   0% { opacity: .8 }
   27% { opacity: .2; }
@@ -676,6 +683,7 @@ width: 100%;
   100% { opacity: .8; }
 }
 /* ---------- Keyframe moveMe ---------- */
+/*
 @-webkit-keyframes foglayer_moveme {
   0% { left: 0; }
   100% { left: -100%; }
@@ -691,5 +699,5 @@ width: 100%;
 @keyframes foglayer_moveme {
   0% { left: 0; }
   100% { left: -100%; }
-}
-
+} 
+ */
