--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,6 @@ footer p{
 
 #hero {
   height: 150px;
-  width: 100%;
   object-fit: cover;
 }
 
@@ -317,7 +316,7 @@ p {
   padding:20px
 }
 
-#photo{
+#profile{
   border-radius: 400px;
   display: flex;
   flex-wrap: wrap;
