--- a/src/index.css
+++ b/src/index.css
@@ -447,22 +447,27 @@ text-decoration: #242526 underline;
   width: 100%;
 }
 .container {
-width: 100%;
+width: 50%;
+display: block;
+margin-left: auto;
+margin-right: auto;
+text-align: center;
 }
 
 .form{
+  display: block;
   width: 80%;
   padding: 20px;
-  display: block;
-  text-align: center;
-  margin-left: 15vw;
-  margin-top: -10vw;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -9vw;
 }
 
 .form-group{
-  width: 80%;
+  width: 100%;
   display: block;
-  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .form-group-btn{
@@ -472,6 +477,7 @@ width: 100%;
 .form-control {
   width: 70%;
   padding: 10px;
+  resize: none;
 }
 
 #card-container{
