--- a/src/index.css
+++ b/src/index.css
@@ -460,7 +460,7 @@ text-align: center;
   padding: 20px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: -9vw;
+  margin-top: -200px;
 }
 
 .form-group{
